--- a/ai_portfolio/index.html
+++ b/ai_portfolio/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <div class="noise-overlay"></div>
-    <div class="cursor"></div>
-    <div class="cursor-follower"></div>
+    <div class="agent"></div>
+    <div class="agent-follower"></div>
     
     <header>
         <div class="logo">
